[package]
name = "rabbit"
version = "0.1.0"
authors = ["win <winhtaikaung28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1"
